<resources>
    <string name="app_name" translatable="false">Toll4All</string>
    <string name="marko_lalovic" translatable="false">Марко ЛаловиЋ</string>
    <string name="lorem_ipsum_placeholder" translatable="false">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Maecenas viverra lacinia finibus. Pellentesque habitant
        morbi tristique senectus et netus et malesuada fames ac turpis egestas.</string>
    <string name="lorem" translatable="false">Adding a card is a mandatory part of account
        creation. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas viverra lacinia
        finibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</string>
    <string name="cvc" translatable="false">CVC</string>
    <string name="lorem_1" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Maecenas viverra lacinia finibus. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas.</string>
    <string name="lorem_2" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Maecenas viverra lacinia finibus. </string>
    <string name="ime" translatable="true">Име</string>
    <string name="surname" translatable="true">Презиме</string>
    <string name="address" translatable="true">Адреса</string>
    <string name="city" translatable="true">Град</string>
    <string name="Zip_Code" translatable="true">Поштански број</string>
    <string name="old_password" translatable="true">Стара лозинка</string>
    <string name="new_password" translatable="true">Нова лозинка</string>
    <string name="passage_history" translatable="true">Историја пролазака</string>
    <string name="search" translatable="true">Претражи</string>
    <string name="tag_serial_number" translatable="true">Серијски број тага</string>
    <string name="complaint" translatable="true">Рекламација</string>
    <string name="refund_request" translatable="true">Захтев за повраћај</string>
    <string name="forgot_your_password" translatable="true">Заборавили сте лозинку?</string>
    <string name="enter_email_for_password_reset" translatable="true">Унесите вашу адресу е-поште и на мејл ће вам стићи упутство за ресетовање лозинке.</string>
    <string name="hint_email" translatable="true">Е-пошта</string>
    <string name="hint_password" translatable="true">Лозинка</string>
    <string name="button_confirm" translatable="true">Потврди</string>
    <string name="button_close" translatable="true">Затвори</string>
    <string name="button_sing_up" translatable="true">Пријави се</string>
    <string name="button_skip_page" translatable="true">Прескочите</string>
    <string name="back_to_login_page" translatable="true">Назад на страну за пријаву.</string>
    <string name="all_rights_reserved" translatable="true">© 2023. Отворени Балкан ЕНП. Сва права задржана</string>
    <string name="my_tags" translatable="true">Моји тагови</string>
    <string name="status" translatable="true">Статус</string>
    <string name="add_tag" translatable="true">Додај таг</string>
    <string name="lost_tag" translatable="true">Изгубљен таг</string>
    <string name="dialog_lost_tag_message" translatable="true">Након слања пријаве таг ће бити блокиран. Уколико пронађете таг, можете поднети захтев за активацијом тага.</string>
    <string name="refund_request_explanation" translatable="true">Уколико сте приликом пребацивања Вашег Таг уређаја са препаид режима на Toll4ALL имали средства на вашем уређају молимо вас да попуните форму како би та средства била уплаћена на Ваш жиро рачун. По пријему Вашег захтева урадићемо проверу у нашем систему и извршити поврат на жељени ЖР.</string>
    <string name="amount" translatable="true">Износ</string>
    <string name="bank_account" translatable="true">Жиро рачун</string>
    <string name="bank" translatable="true">Банка</string>
    <string name="send" translatable="true">Пошаљи </string>
    <string name="registration_text" translatable="true">Регистрација ЕНП/ТАГ уређаја СРБИЈА</string>
    <string name="tags_registration_hint" translatable="true">Молимо вас да унесете регистарску ознаку.
        \nВерификациони код је регистрација.\nСва поља су обавезна</string>
    <string name="serial_number" translatable="true">Серијски број</string>
    <string name="verification_code" translatable="true">Верификациони код</string>
    <string name="name_individual" translatable="true">Име</string>
    <string name="serbia" translatable="true">Србија</string>
    <string name="macedonia" translatable="true">С. Македонија</string>
    <string name="croatia" translatable="true">Хрватска</string>
    <string name="montenegro" translatable="true">Црна Гора</string>
    <string name="welcome_back" translatable="true">Добродошли назад</string>
    <string name="my_invoices" translatable="true">Моје фактуре</string>
    <string name="fragment_verification" translatable="true">Verifikacija</string>
    <string name="verification_code_not_received" translatable="true">Верификациона шифра није стигла?</string>
    <string name="confirm" translatable="true">Потврдите</string>
    <string name="email" translatable="true">Е-пошта</string>
    <string name="verification_code_sent_email" translatable="true">Верификациони
        код је послат на вашу е-пошту</string>
    <string name="category" translatable="true">Категорија</string>
    <string name="registration" translatable="true">Регистрација</string>
    <string name="my_profile" translatable="true">Мој профил</string>
    <string name="basic_information" translatable="true">Основне информације</string>
    <string name="change_password" translatable="true">Промени лозинку</string>
    <string name="payment_methods" translatable="true">Начини плаћања</string>
    <string name="sign_out" translatable="true">Одјава</string>
    <string name="deactivate_account" translatable="true">Деактивирати налог</string>
    <string name="login_my_profile" translatable="true">Мој профил</string>
    <string name="login_to_existing_account" translatable="true">Улогујте се на постојећи налог</string>
    <string name="i_forgot_my_password" translatable="true"><u>Заборавио сам лозинку</u></string>
    <string name="create_business_account" translatable="true">Направите бизнис налог</string>
    <string name="customer_support" translatable="true">Корисничка подршка</string>
    <string name="privacy_terms" translatable="true">Услови коришћења</string>
    <string name="country" translatable="true">Држава</string>
    <string name="save_changes" translatable="true">Сачувај</string>
    <string name="repeat_password" translatable="true">Поново унесите нову лозинку</string>
    <string name="password_changed" translatable="true">Лозинка промењена</string>
    <string name="you_will_be_asked_to_login_again" translatable="true">Потребно је да се опет пријавите на налог.</string>
    <string name="email_address_validation_successful" translatable="true">Валидација емаил адресе
        је успешна!</string>
    <string name="resend_it" translatable="true">Пошаљи поново.</string>
    <string name="address_and_number" translatable="true">Адреса и број</string>
    <string name="business_account" translatable="true">Бизнис рачун</string>
    <string name="personal_account" translatable="true">Лични рачун</string>
    <string name="company_name" translatable="true">Назив фирме</string>
    <string name="registration_number" translatable="true">Матични број</string>
    <string name="tax_identification_number" translatable="true">Identifikacioni Broj TAX</string>
    <string name="support_text" translatable="true">Подршка</string>
    <string name="terms_and_conditions" translatable="true">Услови и приватност</string>
    <string name="all_requests" translatable="true">Сви захтеви</string>
    <string name="button_request" translatable="true">Захтев</string>
    <string name="pay_securely" translatable="true">Плати сигурно преко своје
        кредитне картице.</string>
    <string name="mobile_provider_mts" translatable="true">Мобилни провајдер (MTS)</string>
    <string name="pay_with_mobile_bill" translatable="true">Лако плаћајте
        својим месечним рачуном за мобилни.</string>
    <string name="enter_mobile" translatable="true">Унесите
        број свог мобилног телефона да бисте добили верификациони код путем СМС-а.</string>
    <string name="contact_number" translatable="true">Телефон</string>
    <string name="verification_code_sent" translatable="true">Верификациони
        код је послат на ваш телефон путем СМС-а.</string>
    <string name="add_credit_card" translatable="true">Додај кредитну картицу</string>
    <string name="position_card" translatable="true">Поставите
        своју дебитну или кредитну картицу у оквир за скенирање.</string>
    <string name="scan_card" translatable="true">Скенирај картицу</string>
    <string name="add_manually" translatable="true">Додај ручно</string>
    <string name="settings" translatable="true">Подешавања</string>
    <string name="confirm_lost_tag" translatable="true">Потврдите изгубљен таг</string>
    <string name="cancel" translatable="true">Откажи</string>
    <string name="tag_added_successfully" translatable="true">Успешно сте додали ТАГ.</string>
    <string name="confirm_delete_card" translatable="true">Потврдите брисање картице</string>
    <string name="are_you_sure_you_want_to_delete_the_card" translatable="true">Да ли сте сигурни да желите да обришете картицу?</string>
    <string name="title_dialog_forgot_pass" translatable="true">Заборављена лозинка</string>
    <string name="error_dialog_forgot_pass" translatable="true">Дошло је до грешке.</string>
    <string name="subtitle_dialog_forgot_pass" translatable="true">Емаил није успешно послат кориснику.</string>
    <string name="choose_language">Изаберите језик</string>
    <string name="dialog_select_country_for_card">Изаберите државу за коју додајете картицу.</string>
    <string name="action_cannot_be_undone">Ова акција не може бити поништена и трајно ће обрисати изабрану картицу са вашег налога.</string>
    <string name="remove_card_button">Remove card</string>
    <string name="language_srpski" translatable="false">Cрпски</string>
    <string name="language_srpski_latin" translatable="false">Srpski</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_crnogorski" translatable="false">Crnogorski</string>
    <string name="language_makednoski" translatable="false">Mакедонски</string>
    <string name="language_hrvatski" translatable="false">Hrvatski</string>
    <string name="language_nemacki" translatable="false">Deutsch</string>
    <string name="language_turski" translatable="false">Türki</string>
    <string name="language_grcki" translatable="false">Ελλάδα</string>
    <string name="language_bosnia" translatable="false">Bosanski</string>
    <string name="general_provisions">Опште одредбе</string>
    <string name="permission_denied_message">Дозвола је одбијена</string>
    <string name="camera_permission_required_message">Потребна је дозвола за приступ камери. Можете је омогућити у подешавањима.</string>
    <string name="notes_serbian_tag_in_republic_serbia">Напомене за коришћење српског ТАГ-а у Републици Српској</string>
    <string name="click_registration_republic_serbia">Регистрација ТАГ уређаја, додавање платне картице, наплата пролазака и рекламације су у надлежности компаније Аутопутеви РС д.о.о. Бања Лука. Приговоре/питања/рекламације можете упутити на телефон +387 51 893 995 или на е-пошту: korisnicka.podrska@autoputevirs.com.\n\nНакон успешног додавања платне картице за коришћење ТАГ-а у Републици Српској, потребно је до 15 мин да се статус тага за Републику Српску на корисничком порталу промени у Активан.</string>
</resources>