<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_dialog_borders"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="@dimen/dimens_16dp"
        android:paddingVertical="@dimen/dimens_22dp">

        <TextView
            android:id="@+id/titleConfirmRemoval"
            style="@style/H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_delete_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitleConfirmRemoval"
            style="@style/Paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:text="@string/are_you_sure_you_want_to_delete_the_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleConfirmRemoval" />

        <TextView
            android:id="@+id/underSubTexConfirmRemoval"
            style="@style/CaptionRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_22dp"
            android:text="@string/action_cannot_be_undone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitleConfirmRemoval" />

        <Button
            android:id="@+id/bttConfirmRemoval"
            style="@style/MyButtonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_48dp"
            android:text="@string/remove_card_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/underSubTexConfirmRemoval" />

        <Button
            android:id="@+id/bttCancelConfirmRemoval"
            style="@style/MyOutlinedButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_48dp"
            android:layout_marginEnd="@dimen/dimens_16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/bttConfirmRemoval"
            app:layout_constraintTop_toBottomOf="@+id/underSubTexConfirmRemoval" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>