<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog_borders"
    android:paddingHorizontal="@dimen/dimens_16dp"
    android:paddingVertical="@dimen/dimens_22dp">

    <TextView
        android:id="@+id/titleDialogForgotPass"
        style="@style/H3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_forgot_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorDialogForgotPass"
        style="@style/Paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_12dp"
        android:text="@string/error_dialog_forgot_pass"
        android:textColor="@color/figmaColorObjection"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDialogForgotPass" />

    <TextView
        android:id="@+id/subtitleDialogForgotPass"
        style="@style/Paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimens_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorDialogForgotPass"
        tools:text="@string/subtitle_dialog_forgot_pass" />

    <Button
        android:id="@+id/bttDialogForgotPass"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleDialogForgotPass"
        tools:text="@string/confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>