<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_dialog_password_change"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/dimens_16dp"
        android:paddingBottom="@dimen/dimens_22dp">

        <ImageView
            android:id="@+id/confirmedAddTagDialogClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimens_14dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_close"/>

        <TextView
            style="@style/H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_6dp"
            android:text="@string/add_tag" />

        <TextView
            style="@style/Paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:text="@string/tag_added_successfully" />

        <Button
            android:id="@+id/confirmAddTag"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_48dp"
            android:text="@string/confirm" />

    </LinearLayout>
</layout>