<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_dialog_borders"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="@dimen/dimens_16dp"
        android:paddingVertical="@dimen/dimens_22dp">

        <TextView
            android:id="@+id/titlePermissionDenied"
            style="@style/H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/permission_denied_message" />

        <TextView
            android:id="@+id/subtitlePermissionDenied"
            style="@style/Paragraph"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            app:layout_constraintTop_toBottomOf="@+id/titlePermissionDenied"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/camera_permission_required_message" />

        <Button
            android:id="@+id/bttCancelPermissionDenied"
            style="@style/MyOutlinedButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_48dp"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginEnd="@dimen/dimens_16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bttSettings"
            app:layout_constraintTop_toBottomOf="@+id/subtitlePermissionDenied" />

        <Button
            android:id="@+id/bttSettings"
            style="@style/MyButtonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="@+id/bttCancelPermissionDenied"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bttCancelPermissionDenied" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>