<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_dialog_borders"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="@dimen/dimens_16dp"
        android:paddingVertical="@dimen/dimens_22dp">

        <TextView
            android:id="@+id/titleLostTag"
            style="@style/H3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/dimens_6dp"
            tools:text="@string/confirm_lost_tag" />

        <TextView
            android:id="@+id/subtitleLostTag"
            style="@style/Paragraph"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            app:layout_constraintTop_toBottomOf="@+id/titleLostTag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/dialog_lost_tag_message" />

            <Button
                android:id="@+id/bttCancelLostTag"
                style="@style/MyOutlinedButtonSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_48dp"
                android:layout_marginStart="@dimen/dimens_16dp"
                android:layout_marginEnd="@dimen/dimens_16dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonConfirmLostTag"
                app:layout_constraintTop_toBottomOf="@+id/subtitleLostTag" />

            <Button
                android:id="@+id/buttonConfirmLostTag"
                style="@style/MyButtonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                app:layout_constraintBottom_toBottomOf="@+id/bttCancelLostTag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/bttCancelLostTag" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>