<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog_borders"
    android:backgroundTint="@color/primary_light_lightest">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dimens_16dp"
            android:paddingTop="@dimen/dimens_14dp"
            android:paddingBottom="@dimen/dimens_22dp">

            <TextView
                android:id="@+id/txNotes"
                style="@style/H3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_4dp"
                android:layout_marginEnd="@dimen/dimens_8dp"
                android:text="@string/notes_serbian_tag_in_republic_serbia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txGeneralPrevision"
                style="@style/ParagraphMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_16dp"
                android:text="@string/general_provisions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txNotes" />

            <TextView
                android:id="@+id/txClickRegistration"
                style="@style/Paragraph"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_8dp"
                android:autoLink="all"
                android:linksClickable="true"
                android:text="@string/click_registration_republic_serbia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txGeneralPrevision" />


            <Button
                android:id="@+id/bttCloseNote"
                style="@style/MyButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/button_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txClickRegistration" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>

